wordpress/wordpress-mysql-different-namespace -ingress/mysql-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
