wordpress/wordpress-mysql-different-namespace -ingress/wordpress-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service-prod
  namespace: prod
  labels:
    app: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
    tier: web
  ports:
  - port: 80
    targetPort: 80
