wordpress/wordpress-mysql-different-namespace -ingress/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: 34.117.23.64.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql-service
            port:
              number: 3306
