wordpress/wordpress-mysql-different-namespace -ingress/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: gce
    cloud.google.com/backend-config: '{"ports": {"80":"my-backendconfig"}}'
  labels:
    app: wordpress
spec:
  defaultBackend:
    service:
      name: wordpress-service-prod
      port:
        number: 80
